--- a/src/frontEnd/portfolioApp.html
+++ b/src/frontEnd/portfolioApp.html
@@ -9,23 +9,30 @@
 
 <body>
     <h1>Octavio Zuriel Zavala.DEV</h1>
-    <nav>
-        <div class="flex flex-row gap-2">
-            <a href="">img here</a>
-            <img src="" alt="Twitter Logo">
-        </div>
+    <nav class="pages">
+        <a href="">About</a>
+        <a href="">Works</a>
+        <a href="">Resume</a>
     </nav>
-    <nav>
+    <nav class="socials">
+        <img src="" alt="twitter">
+        <img src="" alt="Github">
+        <img src="" alt="Itch.io">
+        <img src="" alt="linkedin">
     </nav>
     <div>
-        <p class="bio">
-            Hi! I'm Octavio Zuriel Zavala, an undergraduate student at Depaul University pursuing a BS in Game Design,
-            alongside a minor in Computer Science. I aim to develop robust, layered systems to further immerse players
-            in memorable
-            experiences akin to my own as a child. In tangent, I intend to expand my skillset outwards into adjacent
-            fields
-            within technology to forever continue to grow.
-        </p>
+        <section>
+            <p class="bio">
+                Hi! I'm Octavio Zuriel Zavala, an undergraduate student at Depaul University pursuing a BS in Game
+                Design,
+                alongside a minor in Computer Science. I aim to develop robust, layered systems to further immerse
+                players
+                in memorable
+                experiences akin to my own as a child. In tangent, I intend to expand my skillset outwards into adjacent
+                fields
+                within technology to forever continue to grow.
+            </p>
+        </section>
         <hr>
     </div>
 </body>
