3/3/24- Extra page + homePage fixes

--- a/src/frontEnd/portfolioApp.html
+++ b/src/frontEnd/portfolioApp.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" />4
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>title</title>
     <link rel="stylesheet" href="portfolioApp.css">
 </head>
@@ -20,8 +21,9 @@
         <img src="" alt="Itch.io">
         <img src="" alt="linkedin">
     </nav>
-    <div>
-        <section>
+    <section>
+        <div>
+
             <p class="bio">
                 Hi! I'm Octavio Zuriel Zavala, an undergraduate student at Depaul University pursuing a BS in Game
                 Design,
@@ -32,9 +34,10 @@
                 fields
                 within technology to forever continue to grow.
             </p>
-        </section>
-        <hr>
-    </div>
+
+
+        </div>
+    </section>
 </body>
 
 </html>
