Jss added, anchor tags

--- a/src/frontEnd/portfolioApp.html
+++ b/src/frontEnd/portfolioApp.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-    <meta charset="UTF-8" />4
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
     <title>title</title>
     <link rel="stylesheet" href="portfolioApp.css">
 </head>
@@ -11,15 +11,13 @@
 <body>
     <h1>Octavio Zuriel Zavala.DEV</h1>
     <nav class="pages">
-        <a href="">About</a>
-        <a href="">Works</a>
+        <a href="portfolioAppWorks.html">Works</a>
         <a href="">Resume</a>
     </nav>
     <nav class="socials">
-        <img src="" alt="twitter">
-        <img src="" alt="Github">
-        <img src="" alt="Itch.io">
-        <img src="" alt="linkedin">
+        <a href="https://www.linkedin.com/in/octavio-zavala">
+            <img src="" alt="LinkedIn">
+        </a>
     </nav>
     <section>
         <div>
