--- a/src/frontEnd/portfolioApp.html
+++ b/src/frontEnd/portfolioApp.html
@@ -10,20 +10,24 @@
 
 <body>
     <h1>Octavio Zuriel Zavala.DEV</h1>
-    <nav class="pages">
+    <nav class="pages_socials">
         <a href="portfolioAppWorks.html">Works</a>
         <a href="">Resume</a>
+        <nav class="socials">
+            <a href="https://www.linkedin.com/in/octavio-zavala" id="lnin">
+                <img src="C:\Users\zzava\OneDrive\Desktop\zuriel.dev\Images\linkedin.png" alt="LinkedIn"
+                    id="linked_Image">
+            </a>
+            <a href="https://zuriel-zavala.itch.io/">
+                <img src="C:\Users\zzava\OneDrive\Desktop\zuriel.dev\Images\itchio.png" alt="Itch.io" id="itch">
+            </a>
+        </nav>
     </nav>
-    <nav class="socials">
-        <a href="https://www.linkedin.com/in/octavio-zavala">
-            <img src="" alt="LinkedIn">
-        </a>
-    </nav>
+
     <section>
         <div>
-
             <p class="bio">
-                Hi! I'm Octavio Zuriel Zavala, an undergraduate student at Depaul University pursuing a BS in Game
+                I'm Octavio Zuriel Zavala, an undergraduate student at Depaul University pursuing a BS in Game
                 Design,
                 alongside a minor in Computer Science. I aim to develop robust, layered systems to further immerse
                 players
@@ -32,8 +36,6 @@
                 fields
                 within technology to forever continue to grow.
             </p>
-
-
         </div>
     </section>
 </body>
