--- a/src/frontEnd/portfolioApp.html
+++ b/src/frontEnd/portfolioApp.html
@@ -15,11 +15,10 @@
         <a href="">Resume</a>
         <nav class="socials">
             <a href="https://www.linkedin.com/in/octavio-zavala" id="lnin">
-                <img src="C:\Users\zzava\OneDrive\Desktop\zuriel.dev\Images\linkedin.png" alt="LinkedIn"
-                    id="linked_Image">
+                <img src="C:\Users\zzava\Desktop\zuriel.dev\Images\linkedin.png" alt="LinkedIn" id="linked_Image">
             </a>
             <a href="https://zuriel-zavala.itch.io/">
-                <img src="C:\Users\zzava\OneDrive\Desktop\zuriel.dev\Images\itchio.png" alt="Itch.io" id="itch">
+                <img src="C:\Users\zzava\Desktop\zuriel.dev\Images\itchio.png" alt="Itch.io" id="itch">
             </a>
         </nav>
     </nav>
