--- a/src/frontEnd/portfolioApp.html
+++ b/src/frontEnd/portfolioApp.html
@@ -9,18 +9,18 @@
 </head>
 
 <body>
-    <h1>Octavio Zuriel Zavala.DEV</h1>
+    <h1>Octavio Zuriel Zavala Works</h1>
     <nav class="pages_socials">
         <a href="portfolioAppWorks.html">Works</a>
         <a href="">Resume</a>
-        <nav class="socials">
+        <a class="social_icons">
             <a href="https://www.linkedin.com/in/octavio-zavala" id="lnin">
                 <img src="C:\Users\zzava\Desktop\zuriel.dev\Images\linkedin.png" alt="LinkedIn" id="linked_Image">
             </a>
             <a href="https://zuriel-zavala.itch.io/">
                 <img src="C:\Users\zzava\Desktop\zuriel.dev\Images\itchio.png" alt="Itch.io" id="itch">
             </a>
-        </nav>
+    </nav>
     </nav>
 
     <section>
@@ -31,7 +31,8 @@
                 alongside a minor in Computer Science. I aim to develop robust, layered systems to further immerse
                 players
                 in memorable
-                experiences akin to my own as a child. In tangent, I intend to expand my skillset outwards into adjacent
+                experiences akin to my own as a child. In tangent, I intend to expand my skillset outwards into
+                adjacent
                 fields
                 within technology to forever continue to grow.
             </p>
