--- a/src/frontEnd/portfolioApp.html
+++ b/src/frontEnd/portfolioApp.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Octavio Zuriel Zavala Works</h1>
+    <h1>OZZ Works</h1>
     <nav class="pages_socials">
         <a href="portfolioAppWorks.html">Works</a>
         <a href="">Resume</a>
@@ -17,24 +17,16 @@
             <a href="https://www.linkedin.com/in/octavio-zavala" id="lnin">
                 <img src="C:\Users\zzava\Desktop\zuriel.dev\Images\linkedin.png" alt="LinkedIn" id="linked_Image">
             </a>
-            <a href="https://zuriel-zavala.itch.io/">
-                <img src="C:\Users\zzava\Desktop\zuriel.dev\Images\itchio.png" alt="Itch.io" id="itch">
-            </a>
     </nav>
     </nav>
 
     <section>
         <div>
             <p class="bio">
-                I'm Octavio Zuriel Zavala, an undergraduate student at Depaul University pursuing a BS in Game
-                Design,
-                alongside a minor in Computer Science. I aim to develop robust, layered systems to further immerse
-                players
-                in memorable
-                experiences akin to my own as a child. In tangent, I intend to expand my skillset outwards into
-                adjacent
-                fields
-                within technology to forever continue to grow.
+                I'm Octavio Zuriel Zavala, a recently graduated student from Depaul University. Self-driven with a
+                strong foundation in computer science and a deep passion for game programming, I am
+                extremely eager to contribute to innovative projects to further iummerse players in experiences akin to
+                my own. In tangent further my skillset, committed to a lifetime of learning.
             </p>
         </div>
     </section>
