small name change

--- a/src/frontEnd/portfolioApp.html
+++ b/src/frontEnd/portfolioApp.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>OZZ Works</h1>
+    <h1>OZZ.os</h1>
     <nav class="pages_socials">
         <a href="portfolioAppWorks.html">Works</a>
         <a href="">Resume</a>
