--- a/src/frontEnd/portfolioApp.html
+++ b/src/frontEnd/portfolioApp.html
@@ -15,7 +15,7 @@
         <a href="">Resume</a>
         <a class="social_icons">
             <a href="https://www.linkedin.com/in/octavio-zavala" id="lnin">
-                <img src="C:\Users\zzava\Desktop\zuriel.dev\Images\linkedin.png" alt="LinkedIn" id="linked_Image">
+                <img src="C:\dev\zurielSite\zuriel.portfolio.dev\Images\linkedin.png" alt="LinkedIn" id="linked_Image">
             </a>
     </nav>
     </nav>
