Had to see what'swhat

--- a/src/frontEnd/portfolioApp.html
+++ b/src/frontEnd/portfolioApp.html
@@ -9,10 +9,14 @@
 </head>
 
 <body>
-    <h1>OZZ.os</h1>
+    <nav class="header">
+        <h1>Octavio Zuriel Zavala</h1>
+        <h2>Game|Software Developer</h2>
+    </nav>
     <nav class="pages_socials">
         <a href="portfolioAppWorks.html">Works</a>
-        <a href="">Resume</a>
+        <a href="resume">Resume</a>
+        <a href="contact">Contact</a>
         <a class="social_icons">
             <a href="https://www.linkedin.com/in/octavio-zavala" id="lnin">
                 <img src="C:\dev\zurielSite\zuriel.portfolio.dev\Images\linkedin.png" alt="LinkedIn" id="linked_Image">
