--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -11,20 +11,20 @@
 <body>
     <nav class="header">
         <h1>Octavio Zuriel Zavala</h1>
-        <h2>Game|Software Programmer</h2>
+        <h2>Game | Software Programmer</h2>
     </nav>
-    <nav class="pages">
+    <div id="header">
         <a href="">Works</a>
         <a href="">Resume</a>
         <a href="">Contact</a>
-    </nav>
-    <div id="social_media">
-        <a href="https://www.linkedin.com/in/octavio-zavala" target="_blank">
-            <img src="/img/ico/linkedin.png" class="social_ico">
-        </a>
-        <a href="https://github.com/PolarstarCoffee" target="_blank>">
-            <img src="/img/ico/github.png" class="social_ico">
-        </a>
+        <div id="social_media">
+            <a href="https://www.linkedin.com/in/octavio-zavala" target="_blank">
+                <img src="img/ico/linkedin.png" class="social_ico">
+            </a>
+            <a href="https://github.com/PolarstarCoffee" target="_blank>">
+                <img src="img/ico/github.png" class="social_ico">
+            </a>
+        </div>
     </div>
 
     <section>
