--- a/src/home.html
+++ b/src/home.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Octavio Zuriel Zavala - Home</title>
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="home.css">
 </head>
 
 <body>
@@ -14,9 +14,9 @@
         <h2>Game | Software Programmer</h2>
     </nav>
     <div id="header">
-        <a href="">Works</a>
-        <a href="">Resume</a>
-        <a href="">Contact</a>
+        <a href="works.html">Works</a>
+        <a href="resume.html">Resume</a>
+        <a href="contact.html">Contact</a>
         <div id="social_media">
             <a href="https://www.linkedin.com/in/octavio-zavala" target="_blank">
                 <img src="img/ico/linkedin.png" class="social_ico">
@@ -28,8 +28,8 @@
     </div>
 
     <section>
-        <div>
-            <p class="bio">
+        <div id="bio_section">
+            <p id="bio">
                 I'm Octavio Zuriel Zavala, a recently graduated student from Depaul University. Self-driven with a
                 strong foundation in computer science and a deep passion for game programming, I am
                 extremely eager to contribute to innovative projects to further immerse players in experiences akin to
