added sol favicon

--- a/src/home.html
+++ b/src/home.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <title>Octavio Zuriel Zavala - Home</title>
     <link rel="stylesheet" href="home.css">
+    <link rel="icon" type="image/webp" href="img/ico/Gg1sol.webp">
 </head>
 
 <body>
