--- a/src/resume.html
+++ b/src/resume.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Octavio Zuriel Zavala - Resume</title>
+    <link rel="icon" type="image/webp" href="img/ico/Gg1sol.webp">
 </head>
 
 <body>
