--- a/src/home.html
+++ b/src/home.html
@@ -10,34 +10,35 @@
 </head>
 
 <body>
-    <nav class="header">
-        <h1>Octavio Zuriel Zavala</h1>
-        <h2>Game | Software Programmer</h2>
-    </nav>
-    <div id="header">
-        <a href="works.html">Works</a>
-        <a href="resume.html">Resume</a>
-        <a href="contact.html">Contact</a>
-        <div id="social_media">
-            <a href="https://www.linkedin.com/in/octavio-zavala" target="_blank">
-                <img src="img/ico/linkedin.png" class="social_ico">
-            </a>
-            <a href="https://github.com/PolarstarCoffee" target="_blank>">
-                <img src="img/ico/github.png" class="social_ico">
-            </a>
+    <div id="page">
+        <div id="header">
+            <h1>Octavio Zuriel Zavala</h1>
+            <h2>Game | Software Programmer</h2>
+            <a href="works.html">Works</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
+            <div id="social_media">
+                <a href="https://www.linkedin.com/in/octavio-zavala" target="_blank">
+                    <img src="img/ico/linkedin.png" class="social_ico">
+                </a>
+                <a href="https://github.com/PolarstarCoffee" target="_blank>">
+                    <img src="img/ico/github.png" class="social_ico">
+                </a>
+            </div>
         </div>
-    </div>
 
-    <section>
-        <div id="bio_section">
-            <p id="bio">
-                I'm Octavio Zuriel Zavala, a recently graduated student from Depaul University. Self-driven with a
-                strong foundation in computer science and a deep passion for game programming, I am
-                extremely eager to contribute to innovative projects to further immerse players in experiences akin to
-                my own. In tangent further my skillset, committed to a lifetime of learning!
-            </p>
-        </div>
-    </section>
+        <section>
+            <div id="bio_section">
+                <p id="bio">
+                    I'm Octavio Zuriel Zavala, a recently graduated student from Depaul University. Self-driven with a
+                    strong foundation in computer science and a deep passion for game programming, I am
+                    extremely eager to contribute to innovative projects to further immerse players in experiences akin
+                    to my own. In tangent further my skillset, committed to a lifetime of learning!
+                </p>
+            </div>
+        </section>
+
+    </div>
 </body>
 
 </html>
