--- a/src/home.html
+++ b/src/home.html
@@ -12,13 +12,15 @@
 <body>
     <div id="page">
         <div id="header">
-            <h1>Octavio Zuriel Zavala</h1>
-            <h2>Game | Software Programmer</h2>
+            <span id="title">Octavio Zuriel Zavala</span>
+            <span id="subtitle">Game | Software Programmer</span>
+            <a href="home.html">Home</a>
             <a href="works.html">Works</a>
             <a href="resume.html">Resume</a>
             <a href="contact.html">Contact</a>
+            <a href="about.html">About</a>
             <div id="social_media">
-                <a href="https://www.linkedin.com/in/octavio-zavala" target="_blank">
+                <a href="https://www.linkedin.com/in/octavio-zavala/" target="_blank">
                     <img src="img/ico/linkedin.png" class="social_ico">
                 </a>
                 <a href="https://github.com/PolarstarCoffee" target="_blank>">
