--- a/src/about.html
+++ b/src/about.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Octavio Zuriel Zavala - About</title>
+    <link rel="stylesheet" href="home.css">
     <link rel="icon" type="image/webp" href="img/ico/Gg1sol.webp">
 </head>
 
