--- a/src/resume.html
+++ b/src/resume.html
@@ -5,28 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Octavio Zuriel Zavala - Resume</title>
+    <link rel="stylesheet" href="home.css">
     <link rel="icon" type="image/webp" href="img/ico/Gg1sol.webp">
 </head>
 
 <body>
-    <div id="page">
-        <div id="header">
-            <span id="title">Octavio Zuriel Zavala</span>
-            <span id="subtitle">Game | Software Programmer</span>
-            <a href="works.html">Works</a>
-            <a href="resume.html">Resume</a>
-            <a href="contact.html">Contact</a>
-            <a href="about.html">About</a>
-            <div id="social_media">
-                <a href="https://www.linkedin.com/in/octavio-zavala/" target="_blank">
-                    <img src="img/ico/linkedin.png" class="social_ico">
-                </a>
-                <a href="https://github.com/PolarstarCoffee" target="_blank>">
-                    <img src="img/ico/github.png" class="social_ico">
-                </a>
-            </div>
+    <div id="header">
+        <span id="title">Octavio Zuriel Zavala</span>
+        <span id="subtitle">Game | Software Programmer</span>
+        <a href="home.html">Home</a>
+        <a href="works.html">Works</a>
+        <a href="resume.html">Resume</a>
+        <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
+        <div id="social_media">
+            <a href="https://www.linkedin.com/in/octavio-zavala/" target="_blank">
+                <img src="img/ico/linkedin.png" class="social_ico">
+            </a>
+            <a href="https://github.com/PolarstarCoffee" target="_blank>">
+                <img src="img/ico/github.png" class="social_ico">
+            </a>
         </div>
     </div>
+    <div id="resumeBody">
+        BLANK
+
+    </div>
+
 </body>
 
 </html>
