--- a/src/resume.html
+++ b/src/resume.html
@@ -11,21 +11,23 @@
 
 <body>
     <div id="header">
-        <span id="title">Octavio Zuriel Zavala</span>
+        <span id="title" class="titleFont">Octavio Zuriel Zavala</span>
         <span id="subtitle">Game | Software Programmer</span>
+    </div>
+    <div id="subMenu">
         <a href="home.html">Home</a>
         <a href="works.html">Works</a>
         <a href="resume.html">Resume</a>
         <a href="contact.html">Contact</a>
         <a href="about.html">About</a>
-        <div id="social_media">
-            <a href="https://www.linkedin.com/in/octavio-zavala/" target="_blank">
-                <img src="img/ico/linkedin.png" class="social_ico">
-            </a>
-            <a href="https://github.com/PolarstarCoffee" target="_blank>">
-                <img src="img/ico/github.png" class="social_ico">
-            </a>
-        </div>
+    </div>
+    <div id="social_media">
+        <a href="https://www.linkedin.com/in/octavio-zavala/" target="_blank">
+            <img src="img/ico/linkedin.png" class="social_ico">
+        </a>
+        <a href="https://github.com/PolarstarCoffee" target="_blank>">
+            <img src="img/ico/github.png" class="social_ico">
+        </a>
     </div>
     <div id="resumeBody">
         BLANK
