--- a/src/contact.html
+++ b/src/contact.html
@@ -12,7 +12,7 @@
 <body>
     <div id="header">
         <span id="title" class="titleFont">Octavio Zuriel Zavala</span>
-        <span id="subtitle">Game | Software Programmer</span>
+        <span id="subtitle">GAME|SOFTWARE PROGRAMMER</span>
     </div>
     <div id="subMenu">
         <a href="home.html">Home</a>
