added resume pdf

--- a/src/resume.html
+++ b/src/resume.html
@@ -12,7 +12,7 @@
 <body>
     <div id="header">
         <span id="title" class="titleFont">Octavio Zuriel Zavala</span>
-        <span id="subtitle">Game | Software Programmer</span>
+        <span id="subtitle">GAME|SOFTWARE PROGRAMMER</span>
     </div>
     <div id="subMenu">
         <a href="home.html">Home</a>
@@ -30,8 +30,7 @@
         </a>
     </div>
     <div id="resumeBody">
-        BLANK
-
+        <iframe class="resume" src="img/resume/octavio_Resume.pdf" width="500" height="500"></iframe>
     </div>
 
 </body>
