more work, will have to make into a react application

--- a/src/home.html
+++ b/src/home.html
@@ -42,6 +42,13 @@
         </section>
 
     </div>
+    <ul>
+        To-Do
+        <li>Rewrite Introduction Message</li>
+        <li>Choose site wide font</li>
+        <li>FInalize home page layout</li>
+        <li>Style home page</li>
+    </ul>
 </body>
 
 </html>
