--- a/src/resume.html
+++ b/src/resume.html
@@ -32,6 +32,14 @@
     <div id="resumeBody">
         <iframe class="resume" src="img/resume/octavio_Resume.pdf" width="500" height="500"></iframe>
     </div>
+    <div id="todo">
+        <ul>
+            todo
+            <li>MAKE RESUME DOWNLOADABLE</li>
+            <li>EMBED BUTTON(?)</li>
+        </ul>
+
+    </div>
 
 </body>
 
