--- a/src/works.html
+++ b/src/works.html
@@ -46,6 +46,12 @@
             Connect-3 Matching Game made in Unity. Developed
             in 10 weekly sprints within a team of 3.
         </p>
+        <ul>
+            TO-DO
+            <li>Upload Images</li>
+            <li>Decide page layout</li>
+            <li>Style</li>
+        </ul>
 
 
 
