--- a/src/about.html
+++ b/src/about.html
@@ -10,25 +10,30 @@
 </head>
 
 <body>
-    <div id="header">
-        <span id="title" class="titleFont">Octavio Zuriel Zavala</span>
-        <span id="subtitle">GAME|SOFTWARE PROGRAMMER</span>
+    <div id="page">
+        <div id="header">
+            <span id="title" class="titleFont">Octavio Zuriel Zavala</span>
+            <span id="subtitle">GAME|SOFTWARE PROGRAMMER</span>
+        </div>
+        <div id="subMenu">
+            <a href="home.html">Home</a>
+            <a href="works.html">Works</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
+            <a href="about.html">About</a>
+        </div>
+        <div id="social_media">
+            <a href="https://www.linkedin.com/in/octavio-zavala/" target="_blank">
+                <img src="img/ico/linkedin.png" class="social_ico">
+            </a>
+            <a href="https://github.com/PolarstarCoffee" target="_blank>">
+                <img src="img/ico/github.png" class="social_ico">
+            </a>
+        </div>
+
     </div>
-    <div id="subMenu">
-        <a href="home.html">Home</a>
-        <a href="works.html">Works</a>
-        <a href="resume.html">Resume</a>
-        <a href="contact.html">Contact</a>
-        <a href="about.html">About</a>
-    </div>
-    <div id="social_media">
-        <a href="https://www.linkedin.com/in/octavio-zavala/" target="_blank">
-            <img src="img/ico/linkedin.png" class="social_ico">
-        </a>
-        <a href="https://github.com/PolarstarCoffee" target="_blank>">
-            <img src="img/ico/github.png" class="social_ico">
-        </a>
-    </div>
+
+
 </body>
 
 </html>
