--- a/src/home.html
+++ b/src/home.html
@@ -46,7 +46,8 @@
         To-Do
         <li>Rewrite Introduction Message</li>
         <li>Choose site wide font</li>
-        <li>FInalize home page layout</li>
+        <li>Finalize home page layout</li>
+        <li>Choose a porject to display, leave the rest + that one on the works page</li>
         <li>Style home page</li>
     </ul>
 </body>
