--- a/src/resume.html
+++ b/src/resume.html
@@ -10,27 +10,29 @@
 </head>
 
 <body>
-    <div id="header">
-        <span id="title" class="titleFont">Octavio Zuriel Zavala</span>
-        <span id="subtitle">GAME|SOFTWARE PROGRAMMER</span>
-    </div>
-    <div id="subMenu">
-        <a href="home.html">Home</a>
-        <a href="works.html">Works</a>
-        <a href="resume.html">Resume</a>
-        <a href="contact.html">Contact</a>
-        <a href="about.html">About</a>
-    </div>
-    <div id="social_media">
-        <a href="https://www.linkedin.com/in/octavio-zavala/" target="_blank">
-            <img src="img/ico/linkedin.png" class="social_ico">
-        </a>
-        <a href="https://github.com/PolarstarCoffee" target="_blank>">
-            <img src="img/ico/github.png" class="social_ico">
-        </a>
-    </div>
-    <div id="resumeBody">
-        <iframe class="resume" src="img/resume/octavio_Resume.pdf" width="500" height="500"></iframe>
+    <div id="page">
+        <div id="header">
+            <span id="title" class="titleFont">Octavio Zuriel Zavala</span>
+            <span id="subtitle">GAME|SOFTWARE PROGRAMMER</span>
+        </div>
+        <div id="subMenu">
+            <a href="home.html">Home</a>
+            <a href="works.html">Works</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
+            <a href="about.html">About</a>
+        </div>
+        <div id="social_media">
+            <a href="https://www.linkedin.com/in/octavio-zavala/" target="_blank">
+                <img src="img/ico/linkedin.png" class="social_ico">
+            </a>
+            <a href="https://github.com/PolarstarCoffee" target="_blank>">
+                <img src="img/ico/github.png" class="social_ico">
+            </a>
+        </div>
+        <div id="resumeBody">
+            <iframe class="resume" src="img/resume/octavio_Resume.pdf" width="500" height="500"></iframe>
+        </div>
     </div>
     <div id="todo">
         <ul>
