--- a/src/works.html
+++ b/src/works.html
@@ -10,54 +10,51 @@
 </head>
 
 <body>
-    <div id="header">
-        <span id="title" class="titleFont">Octavio Zuriel Zavala</span>
-        <span id="subtitle">GAME|SOFTWARE PROGRAMMER</span>
+    <div id="page">
+        <div id="header">
+            <span id="title" class="titleFont">Octavio Zuriel Zavala</span>
+            <span id="subtitle">GAME|SOFTWARE PROGRAMMER</span>
+        </div>
+        <div id="subMenu">
+            <a href="home.html">Home</a>
+            <a href="works.html">Works</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
+            <a href="about.html">About</a>
+        </div>
+        <div id="social_media">
+            <a href="https://www.linkedin.com/in/octavio-zavala/" target="_blank">
+                <img src="img/ico/linkedin.png" class="social_ico">
+            </a>
+            <a href="https://github.com/PolarstarCoffee" target="_blank>">
+                <img src="img/ico/github.png" class="social_ico">
+            </a>
+        </div>
+        <div id="worksBody">
+            <span id="projectTitle">Monad</span>
+            <p id="projectText">
+                PSX visually inspired 3D adventure platformer
+                developed in Unity. Constructed within weekly sprints over
+                the course of 3 months within a team of 9.
+            </p>
+            <span id="projectTitle">Ibunn</span>
+            <p id="projectText">
+                First person dungeon crawler prototype
+                made in Unity. Developed solo in 10 weekly sprints.
+            </p>
+            <span id="projectTitle">Puppy Pets Puzzle Playground</span>
+            <p id="projectText">
+                Connect-3 Matching Game made in Unity. Developed
+                in 10 weekly sprints within a team of 3.
+            </p>
+        </div>
     </div>
-    <div id="subMenu">
-        <a href="home.html">Home</a>
-        <a href="works.html">Works</a>
-        <a href="resume.html">Resume</a>
-        <a href="contact.html">Contact</a>
-        <a href="about.html">About</a>
-    </div>
-    <div id="social_media">
-        <a href="https://www.linkedin.com/in/octavio-zavala/" target="_blank">
-            <img src="img/ico/linkedin.png" class="social_ico">
-        </a>
-        <a href="https://github.com/PolarstarCoffee" target="_blank>">
-            <img src="img/ico/github.png" class="social_ico">
-        </a>
-    </div>
-    <div id="worksBody">
-        <span id="projectTitle">Monad</span>
-        <p id="projectText">
-            PSX visually inspired 3D adventure platformer
-            developed in Unity. Constructed within weekly sprints over
-            the course of 3 months within a team of 9.
-        </p>
-        <span id="projectTitle">Ibunn</span>
-        <p id="projectText">
-            First person dungeon crawler prototype
-            made in Unity. Developed solo in 10 weekly sprints.
-        </p>
-        <span id="projectTitle">Puppy Pets Puzzle Playground</span>
-        <p id="projectText">
-            Connect-3 Matching Game made in Unity. Developed
-            in 10 weekly sprints within a team of 3.
-        </p>
-        <ul>
-            TO-DO
-            <li>Upload Images</li>
-            <li>Decide page layout</li>
-            <li>Style</li>
-        </ul>
-
-
-
-
-
-    </div>
+    <ul>
+        TO-DO
+        <li>Upload Images</li>
+        <li>Decide page layout</li>
+        <li>Style</li>
+    </ul>
 </body>
 
 </html>
