--- a/src/works.html
+++ b/src/works.html
@@ -14,6 +14,14 @@
         <div id="header">
             <span id="title" class="titleFont">Octavio Zuriel Zavala</span>
             <span id="subtitle">GAME|SOFTWARE PROGRAMMER</span>
+            <div id="social_media">
+                <a href="https://www.linkedin.com/in/octavio-zavala/">
+                    <img src="img/ico/linkedin.png" class="social_ico">
+                </a>
+                <a href="https://github.com/PolarstarCoffee">
+                    <img src="img/ico/github.png" class="social_ico">
+                </a>
+            </div>
         </div>
         <div id="subMenu">
             <a href="home.html">Home</a>
@@ -21,14 +29,6 @@
             <a href="resume.html">Resume</a>
             <a href="contact.html">Contact</a>
             <a href="about.html">About</a>
-        </div>
-        <div id="social_media">
-            <a href="https://www.linkedin.com/in/octavio-zavala/" target="_blank">
-                <img src="img/ico/linkedin.png" class="social_ico">
-            </a>
-            <a href="https://github.com/PolarstarCoffee" target="_blank>">
-                <img src="img/ico/github.png" class="social_ico">
-            </a>
         </div>
         <div id="worksBody">
             <span id="projectTitle">Monad</span>
