--- a/src/home.html
+++ b/src/home.html
@@ -47,7 +47,7 @@
         <li>Rewrite Introduction Message</li>
         <li>Choose site wide font</li>
         <li>Finalize home page layout</li>
-        <li>Choose a porject to display, leave the rest + that one on the works page</li>
+        <li>Choose a project to display, leave the rest + that one on the works page</li>
         <li>Style home page</li>
     </ul>
 </body>
