--- a/src/about.html
+++ b/src/about.html
@@ -23,13 +23,19 @@
                 </a>
             </div>
         </div>
-        <div id="subMenu">
-            <a href="home.html">Home</a>
-            <a href="works.html">Works</a>
-            <a href="resume.html">Resume</a>
-            <a href="contact.html">Contact</a>
-            <a href="about.html">About</a>
+        <div class="subMenu">
+            <a href="home.html" id="menu-home">HOME</a>
+            <a href="works.html" id="menu-works">WORKS</a>
+            <a href="resume.html" id="menu-resume">RESUME</a>
+            <a href="about.html" id="menu-about">ABOUT</a>
+            <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
+        <span id="todo">
+            <ul> TO-DO
+                <li>Format Bookshelf section</li>
+                <li>About bio</li>
+            </ul>
+        </span>
     </div>
 
 
