--- a/src/resume.html
+++ b/src/resume.html
@@ -23,12 +23,12 @@
                 </a>
             </div>
         </div>
-        <div id="subMenu">
-            <a href="home.html">Home</a>
-            <a href="works.html">Works</a>
-            <a href="resume.html">Resume</a>
-            <a href="contact.html">Contact</a>
-            <a href="about.html">About</a>
+        <div class="subMenu">
+            <a href="home.html" id="menu-home">HOME</a>
+            <a href="works.html" id="menu-works">WORKS</a>
+            <a href="resume.html" id="menu-resume">RESUME</a>
+            <a href="about.html" id="menu-about">ABOUT</a>
+            <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
         <div id="resumeBody">
             <iframe class="resume" src="img/resume/octavio_Resume.pdf" width="500" height="500"></iframe>
