more work done at work

--- a/src/contact.html
+++ b/src/contact.html
@@ -30,6 +30,11 @@
             <a href="about.html" id="menu-about">ABOUT</a>
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
+        <ul>TO-DO
+            <li>Format contact page</li>
+            <li>Basic email sending</li>
+
+        </ul>
     </div>
 </body>
 
