--- a/src/home.html
+++ b/src/home.html
@@ -30,15 +30,13 @@
             <a href="about.html" id="menu-about">ABOUT</a>
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
-        <section>
-            <div id="bio_section">
-                <p id="bio">
-                    I'm Octavio Zuriel Zavala, a recently graduated student from Depaul University. Self-driven with a
-                    strong foundation in computer science and a deep passion for game programming, I am
-                    extremely eager to contribute to innovative projects to further immerse players in experiences akin
-                    to my own. In tangent further my skillset, committed to a lifetime of learning!
-                </p>
-            </div>
+        <section id="bio_section">
+            <p id="bio">
+                I'm Octavio Zuriel Zavala, a recently graduated student from Depaul University. Self-driven with a
+                strong foundation in computer science and a deep passion for game programming, I am
+                extremely eager to contribute to innovative projects to further immerse players in experiences akin
+                to my own. In tangent further my skillset, committed to a lifetime of learning!
+            </p>
         </section>
 
     </div>
