--- a/src/home.html
+++ b/src/home.html
@@ -31,6 +31,7 @@
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
         <section id="bio_section">
+            <h1>Hello, Hello!</h1>
             <p id="bio">
                 I'm Octavio Zuriel Zavala, a recently graduated student from Depaul University. Self-driven with a
                 strong foundation in computer science and a deep passion for game programming, I am
