styling work part: whatever

--- a/src/home.html
+++ b/src/home.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/webp" href="img/ico/Gg1sol.webp">
 </head>
 
-<body>
+<body id>
     <div id="page">
         <div id="header">
             <span id="title" class="titleFont">Octavio Zuriel Zavala</span>
