--- a/src/home.html
+++ b/src/home.html
@@ -33,22 +33,23 @@
         <section id="bio_section">
             <h1>Hello, Hello!</h1>
             <p id="bio">
-                I'm Octavio Zuriel Zavala, a recently graduated student from Depaul University. Self-driven with a
+                My name is Zuriel Zavala (Octavio is my first name but most people call me by my middle name),
+                and I'm a recently graduated student from Depaul University. Self-driven with a
                 strong foundation in computer science and a deep passion for game programming, I am
-                extremely eager to contribute to innovative projects to further immerse players in experiences akin
-                to my own. In tangent further my skillset, committed to a lifetime of learning!
+                extremely eager to contribute to innovative projects to further immerse players in digital experiences
+                akin
+                to my own. In tangent further my technical skillset, committed to a lifetime of learning!
             </p>
+            <p id="homeprojintro">
+                Below is my most recently completed project, with a couple of others in my 'Works' section on the site.
+                Take a gander!
+            </p>
+        </section>
+        <section id="homeproject">
+
         </section>
 
     </div>
-    <ul>
-        To-Do
-        <li>Rewrite Introduction Message</li>
-        <li>Choose site wide font</li>
-        <li>Finalize home page layout</li>
-        <li>Choose a project to display, leave the rest + that one on the works page</li>
-        <li>Style home page</li>
-    </ul>
 </body>
 
 </html>
