--- a/src/home.html
+++ b/src/home.html
@@ -41,7 +41,8 @@
                 to my own. In tangent further my technical skillset, committed to a lifetime of learning!
             </p>
             <p id="homeprojintro">
-                Below is my most recently completed project, with a couple of others in my 'Works' section on the site.
+                Below is my most recently completed project, with a couple of others in more detail on my 'Works'
+                section on the site.
                 Take a gander!
             </p>
         </section>
