home page project section work

--- a/src/home.html
+++ b/src/home.html
@@ -47,6 +47,8 @@
             </p>
         </section>
         <section id="homeproject">
+            <h2>Monad</h2>
+            <img src="img/proj_img/monad_alley.png" alt="Monad Intro" id="homemonad1">
 
         </section>
 
