resume page work

--- a/src/resume.html
+++ b/src/resume.html
@@ -30,18 +30,20 @@
             <a href="about.html" id="menu-about">ABOUT</a>
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
-        <div id="resumeBody">
-            <iframe class="resume" src="img/resume/octavio_Resume.pdf" width="500" height="500"></iframe>
+        <div class="resumeBody">
+            <iframe class="resume" src="img/resume/octavio_Resume.pdf" width="600" height="500"></iframe>
+            <div id="resumetext">
+                Here is where I'll type what opprotunities I am on the look out for frfr.
+            </div>
         </div>
-    </div>
-    <div id="todo">
-        <ul>
-            todo
-            <li>MAKE RESUME DOWNLOADABLE</li>
-            <li>EMBED BUTTON(?)</li>
-        </ul>
+        <div id="todo">
+            <ul>
+                todo
+                <li>MAKE RESUME DOWNLOADABLE</li>
+                <li>EMBED BUTTON(?)</li>
+            </ul>
 
-    </div>
+        </div>
 
 </body>
 
