small formatting on resume page

--- a/src/resume.html
+++ b/src/resume.html
@@ -32,19 +32,10 @@
         </div>
         <div class="resumeBody">
             <iframe class="resume" src="img/resume/octavio_Resume.pdf" width="600" height="500"></iframe>
-            <div id="resumetext">
+            <p id="resumetext">
                 Here is where I'll type what opprotunities I am on the look out for frfr.
-            </div>
+            </p>
         </div>
-        <div id="todo">
-            <ul>
-                todo
-                <li>MAKE RESUME DOWNLOADABLE</li>
-                <li>EMBED BUTTON(?)</li>
-            </ul>
-
-        </div>
-
 </body>
 
 </html>
