resume page work

--- a/src/resume.html
+++ b/src/resume.html
@@ -33,7 +33,10 @@
         <div class="resumeBody">
             <iframe class="resume" src="img/resume/octavio_Resume.pdf" width="600" height="500"></iframe>
             <p id="resumetext">
-                Here is where I'll type what opprotunities I am on the look out for frfr.
+                To the left is my current resume as of February 2025.
+                I'm currently applying to game programming positions with the hopes of entering the industry! Though
+                I am employed with Xfinity as an SSA, meanwhile I'm working on projects and doing
+                what I can to push myself forward.
             </p>
         </div>
 </body>
