work from yesterday

--- a/src/resume.html
+++ b/src/resume.html
@@ -35,7 +35,7 @@
             <p id="resumetext">
                 To the left is my current resume as of February 2025.
                 I'm currently applying to game programming positions with the hopes of entering the industry! Though
-                I am employed with Xfinity as an SSA, meanwhile I'm working on projects and doing
+                I am employed with Xfinity as an SSA at the moment, I'm working on projects and doing
                 what I can to push myself forward.
             </p>
         </div>
