--- a/src/contact.html
+++ b/src/contact.html
@@ -16,10 +16,10 @@
             <span id="subtitle">GAME | SOFTWARE PROGRAMMER</span>
             <div id="social_media">
                 <a href="https://www.linkedin.com/in/octavio-zavala/">
-                    <img src="img/ico/linkedin.png" class="social_ico">
+                    <img src="img/ico/linkedin.png" class="social_ico" alt="linkedin">
                 </a>
                 <a href="https://github.com/PolarstarCoffee">
-                    <img src="img/ico/github.png" class="social_ico">
+                    <img src="img/ico/github.png" class="social_ico" alt="github">
                 </a>
             </div>
         </div>
