--- a/src/home.html
+++ b/src/home.html
@@ -16,10 +16,10 @@
             <span id="subtitle">GAME | SOFTWARE PROGRAMMER</span>
             <div id="social_media">
                 <a href="https://www.linkedin.com/in/octavio-zavala/">
-                    <img src="img/ico/linkedin.png" class="social_ico">
+                    <img src="img/ico/linkedin.png" class="social_ico" alt="linkedin">
                 </a>
                 <a href="https://github.com/PolarstarCoffee">
-                    <img src="img/ico/github.png" class="social_ico">
+                    <img src="img/ico/github.png" class="social_ico" alt="github">
                 </a>
             </div>
         </div>
@@ -41,7 +41,7 @@
                 to my own. In tangent further my technical skillset, committed to a lifetime of learning!
             </p>
             <p id="homeprojintro">
-                Below is my most recently completed project, with a couple of others in more detail on my 'Works'
+                Below is my most recently completed project, with more detail alongside a couple of others on my 'Works'
                 section on the site.
                 Take a gander!
             </p>
