js page n works section progress

--- a/src/contact.html
+++ b/src/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Octavio Zuriel Zavala - Contact</title>
     <link rel="stylesheet" href="home.css">
+    <script src="home.js"></script>
     <link rel="icon" type="image/webp" href="img/ico/Gg1sol.webp">
 </head>
 
