--- a/src/works.html
+++ b/src/works.html
@@ -31,21 +31,21 @@
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
         <div id="worksBody">
-            <span id="projectTitle">Monad</span>
+            <span id="projectTitle"><a href="monad.html" id="monadredir">Monad</a></span>
             <p id="projectText">
                 PSX visually inspired 3D adventure platformer
                 developed in Unity. Constructed within weekly sprints over
                 the course of 3 months within a team of 9.
             </p>
-            <span id="projectTitle">Ibunn</span>
-            <p id="projectText">
-                First person dungeon crawler prototype
-                made in Unity. Developed solo in 10 weekly sprints.
-            </p>
             <span id="projectTitle">Puppy Pets Puzzle Playground</span>
             <p id="projectText">
                 Connect-3 Matching Game made in Unity. Developed
                 in 10 weekly sprints within a team of 3.
+            </p>
+            <span id="projectTitle">Ibunn</span>
+            <p id="projectText">
+                First person dungeon crawler prototype
+                made in Unity. Developed solo in 10 weekly sprints.
             </p>
         </div>
     </div>
