slideshow gallery homepage work

--- a/src/home.html
+++ b/src/home.html
@@ -46,11 +46,16 @@
                 Take a gander!
             </p>
         </section>
-        <section id="homeproject">
-            <h2>Monad</h2>
-            <img src="img/proj_img/monad_alley.png" alt="Monad Intro" id="homemonad1">
+        <h2>Monad</h2>
+        <div id="container">
+            <div class="mySlides">
+                <div class="numbertext">1 / 6</div>
+                <img src="img/proj_img/monad_alley.png" alt="Monad Intro" id="homemonad1">
+            </div>
 
-        </section>
+
+
+        </div>
 
     </div>
 </body>
