scrapped some code

--- a/src/home.html
+++ b/src/home.html
@@ -41,23 +41,26 @@
                 to my own. In tangent further my technical skillset, committed to a lifetime of learning!
             </p>
             <p id="homeprojintro">
-                Below is my most recently completed project, with more detail alongside a couple of others on my 'Works'
+                Below are images from my most recently completed project, with more detail alongside a couple of others
+                on my 'Works'
                 section on the site.
                 Take a gander!
             </p>
         </section>
         <h2>Monad</h2>
-        <div id="container">
-            <div class="mySlides">
+        <div class="homepageSlideshow">
+            <div class="hpslides">
                 <div class="numbertext">1 / 6</div>
                 <img src="img/proj_img/monad_alley.png" alt="Monad Intro" id="homemonad1">
             </div>
-
-
-
+            <div class="hpslides">
+                <div class="numbertext">2 / 6</div>
+                <img src="img/proj_img/monad_hall.png" alt="Monad Hallway" id="homemonad2">
+            </div>
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
-
-    </div>
 </body>
 
 </html>
