--- a/src/home.html
+++ b/src/home.html
@@ -50,12 +50,16 @@
         <h2>Monad</h2>
         <div class="homepageSlideshow">
             <div class="hpslides">
-                <div class="numbertext">1 / 6</div>
+                <div class="numbertext">1 / 3</div>
                 <img src="img/proj_img/monad_alley.png" alt="Monad Intro" id="homemonad1">
             </div>
             <div class="hpslides">
-                <div class="numbertext">2 / 6</div>
+                <div class="numbertext">2 / 3</div>
                 <img src="img/proj_img/monad_hall.png" alt="Monad Hallway" id="homemonad2">
+            </div>
+            <div class="hpslides">
+                <div class="numbertext">3 / 3</div>
+                <img src="img/proj_img/monad_hoop.png" alt="Monad hoop" id="homemonad3">
             </div>
             <!-- Next and previous buttons -->
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -65,8 +69,10 @@
         <div style="text-align: center;">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
         </div>
         <script src="home.js"></script>
 </body>
+<!--ADD MORE MONAD PHOTOS TO GALLERY-->
 
 </html>
