--- a/src/about.html
+++ b/src/about.html
@@ -30,11 +30,10 @@
             <a href="about.html" id="menu-about">ABOUT</a>
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
-        <span id="todo">
-            <ul> TO-DO
-                <li>Format Bookshelf section</li>
-                <li>About bio</li>
-            </ul>
+        <span id="aboutintro">
+            <p>
+                Here is my bio.
+            </p>
         </span>
     </div>
 
