had a great day today

--- a/src/about.html
+++ b/src/about.html
@@ -31,8 +31,28 @@
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
         <span id="aboutintro">
-            <p>
-                Here is my bio.
+            <p id="aboutstart">
+                I’m Octavio Zuriel Zavala, and I’m a ludicrously huge enthusiast in the realms of game development and
+                tech. During my
+                time at DePaul University, I had studied game design for my bachelor’s with my minor in computer
+                science. Amidst my
+                studies I grew to love the process of executing an idea or concept through programming. I will never
+                forget the late
+                nights of debugging and scouring through documentation to eventually lead to the eureka moment in which
+                everything falls
+                into its correct place. Combining that with developing alongside an even more passionate team only
+                solidified my love
+                for the field, the people, and their craft.
+            </p>
+            <p id="aboutnext">
+                Now that I’ve graduated, I look forward to the next opportunity in which I can contribute my passion and
+                technical
+                skills to bring to life more wonderful and strange digital experiences. While always trying my best to
+                remain frontwards facing
+            </p>
+            <p id="aboutlast">
+                Check out what I've been reading as of late!
+
             </p>
         </span>
     </div>
