--- a/src/about.html
+++ b/src/about.html
@@ -54,6 +54,8 @@
                 Check out what I've been reading as of late!
 
             </p>
+            <div id="bookshelfsection"></div>
+            <h1>Bookshelf</h1>
         </span>
     </div>
 
