bookshelf work, while at work

--- a/src/about.html
+++ b/src/about.html
@@ -54,9 +54,10 @@
                 Check out what I've been reading as of late!
 
             </p>
-            <div id="bookshelfsection"></div>
-            <h1>Bookshelf</h1>
         </span>
+        <div class="bookshelfsection">
+            <h1 id="bookshelftitle">Bookshelf</h1>
+        </div>
     </div>
 
 
