--- a/src/about.html
+++ b/src/about.html
@@ -58,6 +58,10 @@
         <div class="bookshelfsection">
             <h1 id="bookshelftitle">Bookshelf</h1>
         </div>
+        <ul>
+            <li>SOMETHING</li>
+
+        </ul>
     </div>
 
 
