--- a/src/about.html
+++ b/src/about.html
@@ -56,12 +56,29 @@
             </p>
         </span>
         <div class="bookshelfsection">
-            <h1 id="bookshelftitle">Bookshelf</h1>
+            <h1 id="bookshelftitle">Current Reads</h1>
         </div>
         <ul>
-            <li>SOMETHING</li>
-
+            <li>Programming Interviews Exposed: Secrets to Landing Your Next Job Third Edition by <em>John Mongan, Eric
+                    Giguere, Noah
+                    Kindler (ISBN: 978-1-118-26136-1)
+                </em>
+            </li>
+            <li>
+                Game Engine Architecture, Third Edition by
+                <em>Jason Gregory
+                    (ISBN: 907-1-138-034545-4)
+                </em>
+            </li>
+            <li>Code Complete, Second Edition by
+                <em>Steve McConnell
+                    (ISBN: 0-7356-1967-0)
+                </em>
+            </li>
         </ul>
+        <div class="restofshelf">
+            <h2 id="booklog">Bookshelf</h2>
+        </div>
     </div>
 
 
