--- a/src/about.html
+++ b/src/about.html
@@ -78,6 +78,75 @@
         </ul>
         <div class="restofshelf">
             <h2 id="booklog">Bookshelf</h2>
+            <ul>
+                <li>
+                    Agile Game Development with Scrum by
+                    <em>Clinton Keith
+                        (ISBN: 0-321-61852-1)
+                    </em>
+                </li>
+                <li>
+                    Introduction to 3D Game Programming with DirectX 11 by
+                    <em>
+                        Frank D. Luna
+                        (ISBN: 978-1-9364202-2-3)
+                    </em>
+                </li>
+                <li>
+                    Learn C++ By Making Games by
+                    <em>Erik Yuzwa and Francois Dominic
+                        Laramee
+                        (ISBN: 978-1-58450-455-2)
+                    </em>
+                </li>
+                <li>
+                    The C++ Standard Library from Scratch by
+                    <em>Pablo Halpern
+                        (ISBN: 0-7897-2128-7)</em>
+                </li>
+                <li>
+                    Game Programming Gems
+                    <em>edited by Mark DeLoura
+                        (ISBN: 1-58450-049-2)</em>
+                </li>
+                <li>
+                    Game Programming Gems 6
+                    <em>edited by Michael Dickheiser
+                        (ISBN: 1-58450-450-1)</em>
+                </li>
+                <li>
+                    Writing Secure Code Second Edition
+                    <em>by Michael Howard
+                        and David LeBlanc
+                        (ISBN: 0-7356-1722-8)
+                    </em>
+                </li>
+                <li>
+                    C++ Crash Course
+                    <em>by Josh Lospinoso
+                        (ISBN: 978-1-59327-888-5)
+                    </em>
+                </li>
+                <li>
+                    Data Structures: Abstraction and Design Using Java Second
+                    Edition
+                    <em>by Elliot B. Koffman and Paul A. T. Wolfgang
+                        (ISBN: 978-0-470-12870-1)
+                    </em>
+                </li>
+                <li>
+                    Computer Systems: A Programmer's Perspective, Third Edition
+                    <em>by Randal E. Bryant and David R. O'Hallaron
+                        (ISBN: 978-93-325-7390-1)
+                    </em>
+                </li>
+                <li>
+                    Programming in C Fourth Edition
+                    <em>by Stephen G. Kochan
+                        (ISBN: 978-0-321-77641-9)
+                    </em>
+                </li>
+            </ul>
         </div>
     </div>
 
